more content tweaks to module A, build notes and slides

--- a/modules/4-A/day1.tex
+++ b/modules/4-A/day1.tex
@@ -229,9 +229,8 @@ Let $D: \P^3 \rightarrow \P^2$ be the derivative map \(D(f(x))=f'(x)\).
 (Earlier we showed this is a linear transformation.)
 \begin{subactivity}
 Write down an equivalent linear transformation $T: \IR^4 \rightarrow \IR^3$
-by converting the ordered bases \(\{1,x,x^2,x^3\}\) and \(\{1,x,x^2\}\) for
-\(\P^3\) and \(\P^2\) to the
-standard bases for \(\IR^4\) and \(\IR^3\).
+by converting \(\{1,x,x^2,x^3\}\) and \(\{D(1),D(x),D(x^2),D(x^3)\}\) into
+appropriate vectors in \(\IR^4\) and \(\IR^3\).
 \end{subactivity}
 \begin{subactivity}
 Write the matrix corresponding to $T$ with respect to the standard bases.
