--- a/modules/4-A/day2.tex
+++ b/modules/4-A/day2.tex
@@ -26,13 +26,13 @@ $T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
+Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
 The matrix (with respect to the standard bases) of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
 Is $T$ surjective?
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The matrix (with respect to the standard bases) of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
+Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The matrix (with respect to the standard bases) of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
 Is $T$ surjective?
 \end{activity}
 
@@ -46,11 +46,11 @@ is an important subspace of \(V\) defined by
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel of $T$.
+Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel of $T$.
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel of $T$.
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel of $T$.
 \end{activity}
 
 
@@ -61,13 +61,10 @@ Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matri
 Write a system of equations whose solution set is the kernel.
 \end{subactivity}
 \begin{subactivity}
-Compute $\RREF(A)$ and solve the system of equations.
+Use $\RREF(A)$ to solve the system of equations and find the kernel of \(T\).
 \end{subactivity}
 \begin{subactivity}
-Compute the kernel of $T$
-\end{subactivity}
-\begin{subactivity}
-Find a basis for the kernel of $T$
+Find a basis for the kernel of $T$.
 \end{subactivity}
 \end{activity}
 
@@ -75,17 +72,17 @@ Find a basis for the kernel of $T$
 \begin{definition}
 Let $T: V \rightarrow W$ be a linear transformation.
 The \term{image} of $T$ is an important subspace of \(W\) defined by
-\begin{align*}
-\Im T &= \left\{ \vec{w} \in W\ \big|\ \text{there is some }v\in V \text{ with } T(\vec{v})=\vec{w}\right\}
-\end{align*}
+\[
+\Im T = \left\{ \vec{w} \in W\ \big|\ \text{there is some }v\in V \text{ with } T(\vec{v})=\vec{w}\right\}
+\]
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$ (for the standard basis).  Find the image of $T$.
+Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$ (for the standard basis).  Find the image of $T$.
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$ (for the standard basis).  Find the image of $T$.
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$ (for the standard basis).  Find the image of $T$.
 \end{activity}
 
 
