--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -16,9 +16,9 @@
 \newcommand{\IR}{\mathbb{R}}
 \newcommand{\IC}{\mathbb{C}}
 \renewcommand{\P}{\mathcal{P}}
-\renewcommand{\Im}{{\rm Im\ }}
-\DeclareMathOperator{\RREF}{RREF}
-\DeclareMathOperator{\vspan}{span}
+\renewcommand{\Im}{\operatorname{Im}}
+\newcommand{\RREF}{\operatorname{RREF}}
+\newcommand{\vspan}{\operatorname{span}}
 
 %%%Custom Counters%%%
 \newcommand{\moduleLetter}{X}
