use "standard basis" terminology for linear maps. closes #63

--- a/includes/standards-base.tex
+++ b/includes/standards-base.tex
@@ -40,7 +40,7 @@
 
 \item[How can we understand linear maps algebraically?] \hfill
 \begin{enumerate}[{$\Box\ \Box$ \bf {A}1.}]
-\item {\bf Linear maps as matrices}.  I can write the matrix (with respect to the standard bases) corresponding to a linear transformation between Euclidean spaces.
+\item {\bf Linear maps as matrices}.  I can write the standard matrix corresponding to a linear transformation between Euclidean spaces.
 \item {\bf Linear map verification}. I can determine if a map between vector spaces is linear or not.
 \item {\bf Injectivity and surjectivity}.  I can determine if a given linear map is injective and/or surjective.
 \item {\bf Kernel and Image}. I can compute the kernel and image of a linear map, including finding bases.
