--- a/modules/4-A/day1.tex
+++ b/modules/4-A/day1.tex
@@ -183,7 +183,7 @@ The \term{standard basis} of $\IR^n$ is the (ordered) basis $\{\vec{e}_1, \vec{e
 
 Since linear transformation \(T:\IR^n\to\IR^m\) is determined by
 the values of each \(T(\vec e_i)\), it's convenient to store this
-information in the \(m\times n\) matrix
+information in the \(m\times n\) \term{standard matrix}
 \([T(\vec e_1) \,\cdots\, T(\vect e_n)]\).
 \end{definition}
 
@@ -197,7 +197,8 @@ T\left(\begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} -1 \
 T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right) &= \begin{bmatrix} 5 \\ 0\end{bmatrix}
 \end{align*}
 
-Then the matrix corresponding to $T$ with respect to the standard bases is $$\begin{bmatrix}3 & -1 & 5 \\ 2 & 4 & 0 \end{bmatrix}.$$
+Then the standard matrix corresponding to $T$
+is $$\begin{bmatrix}3 & -1 & 5 \\ 2 & 4 & 0 \end{bmatrix}.$$
 \end{example}
 
 \begin{activity}{5}
@@ -207,7 +208,7 @@ Write the matrix corresponding to this linear transformation with respect to the
 \end{activity}
 
 \begin{activity}{5}
-  Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matrix (with respect to the standard bases) $$\begin{bmatrix} 3  & -2 & -1  \\ 4 & 5 & 2 \end{bmatrix}.$$
+  Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $$\begin{bmatrix} 3  & -2 & -1  \\ 4 & 5 & 2 \end{bmatrix}.$$
 
 Compute $T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) $.
 \end{activity}
@@ -233,7 +234,7 @@ by converting \(\{1,x,x^2,x^3\}\) and \(\{D(1),D(x),D(x^2),D(x^3)\}\) into
 appropriate vectors in \(\IR^4\) and \(\IR^3\).
 \end{subactivity}
 \begin{subactivity}
-Write the matrix corresponding to $T$ with respect to the standard bases.
+Write the standard matrix corresponding to $T$.
 \end{subactivity}
 \end{activity}
 
