--- a/modules/4-A/day2.tex
+++ b/modules/4-A/day2.tex
@@ -11,12 +11,12 @@ $T$ is called \term{injective} or \term{one-to-one} if $T$ does not map two dist
 
 \begin{activity}{5}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
-The matrix (with respect to the standard bases) of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
+The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
 Is $T$ injective?
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The matrix (with respect to the standard bases) of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
+Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
 Is $T$ injective?
 \end{activity}
 
@@ -27,12 +27,12 @@ $T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped
 
 \begin{activity}{5}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
-The matrix (with respect to the standard bases) of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
+The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
 Is $T$ surjective?
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The matrix (with respect to the standard bases) of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
+Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
 Is $T$ surjective?
 \end{activity}
 
@@ -46,17 +46,17 @@ is an important subspace of \(V\) defined by
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel of $T$.
+Let $T: \IR^2 \rightarrow \IR^3$ be given by the standard matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Find the kernel of $T$.
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel of $T$.
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Find the kernel of $T$.
 \end{activity}
 
 
 
 \begin{activity}{10}
-Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$ (for the standard basis).
+Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$.
 \begin{subactivity}
 Write a system of equations whose solution set is the kernel.
 \end{subactivity}
@@ -78,16 +78,16 @@ The \term{image} of $T$ is an important subspace of \(W\) defined by
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$ (for the standard basis).  Find the image of $T$.
+Let $T: \IR^2 \rightarrow \IR^3$ be given by the standard matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Find the image of $T$.
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$ (for the standard basis).  Find the image of $T$.
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Find the image of $T$.
 \end{activity}
 
 
 \begin{activity}{10}
-Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$ (for the standard basis).
+Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$.
 \begin{subactivity}
 Find a convenient set of vectors \(S\subseteq\IR^2\) such that \(\vspan S=\Im T\).
 \end{subactivity}
