--- a/modules/4-A/day3.tex
+++ b/modules/4-A/day3.tex
@@ -46,8 +46,8 @@ recognized by its same codomain and image.
 \end{fact}
 
 \begin{activity}{15}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$ (for the standard bases). Sort the following claims into two groups of
-equivalent statements.
+Let $T: \IR^n \rightarrow \IR^m$ be a linear map with standard matrix $A$.
+Sort the following claims into two groups of equivalent statements.
 \begin{multicols}{2}
 \begin{enumerate}[(a)]
 \item $T$ is injective
@@ -74,7 +74,8 @@ If $T: V \rightarrow W$ is both injective and surjective, it is called \term{bij
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^n \rightarrow \IR^m$ be a bijective linear map with matrix $A$ (for the standard bases). Label each of the following as true or false.
+Let $T: \IR^n \rightarrow \IR^m$ be a bijective linear map with
+standard matrix $A$. Label each of the following as true or false.
 \begin{enumerate}[(a)]
 \item The columns of $A$ form a basis for $\IR^m$
 \item $\RREF(A)$ is the identity matrix.
