--- a/modules/4-A/index.tex
+++ b/modules/4-A/index.tex
@@ -5,7 +5,7 @@
 
 \begin{moduleStandards}
   \item \textbf{A1. Linear maps as matrices}
-         I can write the matrix (with respect to the standard bases) corresponding to a linear transformation between Euclidean spaces.
+         I can write the standard matrix corresponding to a linear transformation between Euclidean spaces.
   \item \textbf{A2. Linear map verification}
         I can determine if a map between vector spaces is linear or not.
   \item \textbf{A3. Injectivity and Surjectivity}
