Fix typos module A

--- a/modules/4-A/day1.tex
+++ b/modules/4-A/day1.tex
@@ -168,7 +168,7 @@ How many facts of the form $T(\vec{v}_i)=\vec{w}_i$ do you need to know in order
 Consider any basis \(\{\vect b_1,\dots,\vect b_n\}\) for $V$.  Since every vector can be written \textit{uniquely} as a linear combination of basis vectors, every linear transformation $T:V \rightarrow W$ is determined by those basis vectors.
 
 \[
-  T(\vect v)=T(x_1\vect b_1+\dots x_n\vect b_n)=
+  T(\vect v)=T(x_1\vect b_1+\dots+ x_n\vect b_n)=
   x_1T(\vect b_1)+\dots+x_nT(\vect b_n)
 \]
 \end{fact}
