--- a/modules/4-A/day3.tex
+++ b/modules/4-A/day3.tex
@@ -27,11 +27,11 @@ about \(T\)?
 
 \begin{fact}
 A linear transformation $T$ is injective \textbf{if and only if} $\ker T = \{\vec{0}\}$. Put another way, an injective linear transformation may be
-recognized by its \term{trivial} kernal.
+recognized by its \term{trivial} kernel.
 \end{fact}
 
 \begin{activity}{5}
-Let $T: V \rightarrow \IR^3$ be a linear transformation where
+Let $T: \IR^3 \rightarrow \IR^3$ be a linear transformation where
 $\Im T = \vspan \left\{ \begin{bmatrix} 1 \\ 0 \\ 3 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ -1 \end{bmatrix} \right\}$.
 Can you answer either of the following questions about \(T\)?
 \begin{enumerate}[(a)]
