--- a/assessments/problems/A3.tex
+++ b/assessments/problems/A3.tex
@@ -38,13 +38,13 @@ Since all columns are pivot columns, $S$ is injective.  Since there is a zero ro
 \begin{problem}{A3}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
-\item $S: \IR^2 \rightarrow \IR^2$ given by the matrix $\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}$.
-\item $T: \IR^4 \rightarrow \IR^3$ given by the matrix $\begin{bmatrix} 2 & 3 & -1 & -2 \\ 0 & 1 & 3 & 1 \\ 2 & 1 & -7 & -4 \end{bmatrix}$
+\item $S: \IR^2 \rightarrow \IR^2$ given by the standard matrix $\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}$.
+\item $T: \IR^4 \rightarrow \IR^3$ given by the standard matrix $\begin{bmatrix} 2 & 3 & -1 & -2 \\ 0 & 1 & 3 & 1 \\ 2 & 1 & -7 & -4 \end{bmatrix}$
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $ \RREF\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there is no zero row, $S$ is surjective. 
+\item $ \RREF\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there is no zero row, $S$ is surjective.
 \item Since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
 $$\RREF\left(\begin{bmatrix} 2 & 3 & -1 & -2 \\ 0 & 1 & 3 & 1 \\ 2 & 1 & -7 & -4 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & -5 & -\frac{5}{2} \\ 0 & 1 & 3 & 1 \\ 0 & 0 & 0 & 0\end{bmatrix}$$
 Since there are only two pivot columns, $T$ is not surjective.
@@ -55,13 +55,13 @@ Since there are only two pivot columns, $T$ is not surjective.
 \begin{problem}{A3}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
-\item $S: \IR^2 \rightarrow \IR^2$ given by the matrix $\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}$.
-\item $T: \IR^4 \rightarrow \IR^3$ given by the matrix $\begin{bmatrix} 2 & 3 & -1 & -2 \\ 0 & 1 & 4 & 1 \\ 2 & 1 & -7 & -4 \end{bmatrix}$
+\item $S: \IR^2 \rightarrow \IR^2$ given by the standard matrix $\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}$.
+\item $T: \IR^4 \rightarrow \IR^3$ given by the standard matrix $\begin{bmatrix} 2 & 3 & -1 & -2 \\ 0 & 1 & 4 & 1 \\ 2 & 1 & -7 & -4 \end{bmatrix}$
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $ \RREF\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there is no zero row, $S$ is surjective. 
+\item $ \RREF\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there is no zero row, $S$ is surjective.
 \item Since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
 $$\RREF\left(\begin{bmatrix} 2 & 3 & -1 & -2 \\ 0 & 1 & 3 & 1 \\ 2 & 1 & -7 & -4 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & 0 & -\frac{5}{2} \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 0\end{bmatrix}$$
 Since there are no zero rows, $T$ is surjective.
@@ -71,13 +71,13 @@ Since there are no zero rows, $T$ is surjective.
 \begin{problem}{A3}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
-\item $S: \IR^2 \rightarrow \IR^4$ given by the matrix $\begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}$.
-\item $T: \IR^4 \rightarrow \IR^3$ given by the matrix $\begin{bmatrix} 2 & 3 & -1 & 1 \\ -1 & 1 & 1 & 1 \\ 4 & 11 & -1 & 5 \end{bmatrix}$
+\item $S: \IR^2 \rightarrow \IR^4$ given by the standard matrix $\begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}$.
+\item $T: \IR^4 \rightarrow \IR^3$ given by the standard matrix $\begin{bmatrix} 2 & 3 & -1 & 1 \\ -1 & 1 & 1 & 1 \\ 4 & 11 & -1 & 5 \end{bmatrix}$
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $ \begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \\ 0 & 0 \\ 0 & 0  \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there a no zero row, $S$ is not surjective. 
+\item $ \begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \\ 0 & 0 \\ 0 & 0  \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there a no zero row, $S$ is not surjective.
 \item Since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
 $$\RREF\left(\begin{bmatrix} 2 & 3 & -1 & 1 \\ -1 & 1 & 1 & 1 \\ 4 & 11 & -1 & 5 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0  & -\frac{4}{5} & -\frac{2}{5} \\ 0 & 1 & \frac{1}{5} & \frac{3}{5} \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
 Since there is a zero row, $T$ is not surjective.
@@ -87,15 +87,146 @@ Since there is a zero row, $T$ is not surjective.
 \begin{problem}{A3}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
-\item $S: \IR^2 \rightarrow \IR^4$ given by the matrix $\begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}$.
-\item $T: \IR^4 \rightarrow \IR^3$ given by the matrix $\begin{bmatrix} 2 & 3 & -1 & 1 \\ -1 & 1 & 1 & 1 \\ 4 & 7 & -1 & 5 \end{bmatrix}$
+\item $S: \IR^2 \rightarrow \IR^4$ given by the standard matrix $\begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}$.
+\item $T: \IR^4 \rightarrow \IR^3$ given by the standard matrix $\begin{bmatrix} 2 & 3 & -1 & 1 \\ -1 & 1 & 1 & 1 \\ 4 & 7 & -1 & 5 \end{bmatrix}$
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $ \begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \\ 0 & 0 \\ 0 & 0  \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there a no zero row, $S$ is not surjective. 
+\item $ \begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \\ 0 & 0 \\ 0 & 0  \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there a no zero row, $S$ is not surjective.
 \item Since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
 $$\RREF\left(\begin{bmatrix} 2 & 3 & -1 & 1 \\ -1 & 1 & 1 & 1 \\ 4 & 7 & -1 & 5 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0  & 0 & 2 \\ 0 & 1 & 0 & 0  \\ 0 & 0 & 1 & 3 \end{bmatrix}$$
 Since there is not a zero row, $T$ is surjective.
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{A3}
+Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
+\begin{enumerate}[(a)]
+\item
+  \(S: \IR^2 \rightarrow \IR^3\) where
+  \(S(\vec e_1)=\begin{bmatrix}
+    2 \\
+    1 \\
+    0
+  \end{bmatrix}\) and
+  \(S(\vec e_2)=\begin{bmatrix}
+    1 \\
+    2 \\
+    1
+  \end{bmatrix}\).
+\item
+  \(T: \IR^3 \rightarrow \IR^2\) where
+  \(T(\vec e_1)=\begin{bmatrix}
+    2 \\
+    2
+  \end{bmatrix}\),
+  \(T(\vec e_2)=\begin{bmatrix}
+   1  \\
+   0
+  \end{bmatrix}\), and
+  \(T(\vec e_3)=\begin{bmatrix}
+    1 \\
+    1
+  \end{bmatrix}\).
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item
+  \(\RREF\begin{bmatrix}
+    2 & 1 \\
+    1 & 2 \\
+    0 & 1
+  \end{bmatrix}=\begin{bmatrix}
+    1 & 0 \\
+    0 & 1 \\
+    0 & 0
+  \end{bmatrix}\).
+  The map is injective since every column has a pivot, but is not surjective
+  because there is a row without a pivot.
+\item
+  \(\RREF\begin{bmatrix}
+    2 & 1 & 1 \\
+    2 & 0 & 1
+  \end{bmatrix}=\begin{bmatrix}
+    1 & 0 & 1/2 \\
+    0 & 1 & 1/2
+  \end{bmatrix}\).
+  The map is not injective since there is a column without a pivot,
+  but it is surjective because every row has a pivot.
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{A3}
+Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
+\begin{enumerate}[(a)]
+\item
+  \(S: \IR^4 \rightarrow \IR^3\) where
+  \(S(\vec e_1)=\begin{bmatrix}
+    2  \\
+    1 \\
+    0
+  \end{bmatrix}\),
+  \(S(\vec e_2)=\begin{bmatrix}
+    1  \\
+    2\\
+    1
+  \end{bmatrix}\),
+  \(S(\vec e_3)=\begin{bmatrix}
+    0  \\
+    -1 \\
+    0
+  \end{bmatrix}\), and
+  \(S(\vec e_4)=\begin{bmatrix}
+    3 \\
+    2\\
+    1
+  \end{bmatrix}\),
+\item
+  \(T: \IR^3 \rightarrow \IR^3\) where
+  \(T(\vec e_1)=\begin{bmatrix}
+    2  \\
+    2 \\
+    1\\
+  \end{bmatrix}\),
+  \(T(\vec e_2)=\begin{bmatrix}
+     1 \\
+     0 \\
+     4 \\
+  \end{bmatrix}\), and
+  \(T(\vec e_3)=\begin{bmatrix}
+     1 \\
+     2 \\
+     -3 \\
+  \end{bmatrix}\).
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item
+  \(\RREF\begin{bmatrix}
+    2 & 1 & 0 & 3 \\
+    1 & 2 & -1 & 2\\
+    0 & 1 & 0 & 1
+  \end{bmatrix}=\begin{bmatrix}
+    1 & 0 & 0 & 1\\
+    0 & 1 & 0 & 1\\
+    0 & 0 & 1 & 1
+  \end{bmatrix}\).
+  The map is not injective since it has a column without pivot,
+  but it is surjective because every row has a pivot.
+\item
+  \(\RREF\begin{bmatrix}
+    2 & 1 & 1 \\
+    2 & 0 & 2 \\
+    1 & 4 & -3
+  \end{bmatrix}=\begin{bmatrix}
+    1 & 0 & 1 \\
+    0 & 1 & -1 \\
+    0 & 0 & 0
+  \end{bmatrix}\).
+  The map is not injective since there is a column without a pivot,
+  and it is not surjective because there is a row without a pivot.
 \end{enumerate}
 \end{solution}
